--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "speedtest-net": "^1.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
