--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-router-dom": "^5.1.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "speedtest-net": "^1.6.0"
+    "speedtest-net": "^1.6.0",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
