--- a/package.json
+++ b/package.json
@@ -1,28 +1,41 @@
 {
-  "name": "parcele",
+  "name": "Ping",
   "version": "0.0.0",
-  "description": "parcel + electron + react",
+  "description": "Test the internet speed",
   "main": "app/electron.js",
   "author": "Eduardo Lopes",
   "license": "MIT",
   "scripts": {
-    "parcel-server": "yarn run parcel -p 3000 app/index.html --out-dir build",
-    "parcel-build": "yarn run parcel build app/index.html --out-dir build --public-url ./",
+    "postinstall": "yarn run electron-builder install-app-deps",
+    "parcel-server": "yarn run parcel -p 3000 ./app/index.html --out-dir build/",
+    "parcel-build": "yarn run parcel build ./app/index.html --out-dir build/ --public-url ./",
     "wait-server": "wait-on http://localhost:3000",
     "clean-build": "yarn run del build/ .cache dist/",
     "build": "yarn run clean-build && yarn run parcel-build && yarn run electron-builder --dir",
-    "pack": "yarn run clean-build && yarn run parcel-build && yarn run electron-builder",
+    "pack": "yarn run electron-builder",
     "dev": "yarn run del build/ && yarn run concurrently \"yarn run parcel-server\" \"yarn run wait-server && cross-env NODE_ENV=development electron .\""
   },
   "build": {
-    "appId": "com.parcele",
+    "appId": "com.ping",
+    "extraFiles": [
+      {
+        "from": "app/ookla-speedtest-1.0.0-win64",
+        "to": "Resources/bin",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ],
     "files": [
       "app/electron.js",
+      "app/DB.js",
+      "app/preload.js",
       "build/**/*"
     ]
   },
   "dependencies": {
     "electron-is-dev": "^1.1.0",
+    "electron-root-path": "^1.0.16",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
