--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "electron-root-path": "^1.0.16",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "rc-calendar": "^9.15.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
