--- a/package.json
+++ b/package.json
@@ -46,11 +46,15 @@
   "dependencies": {
     "electron-is-dev": "^1.1.0",
     "electron-root-path": "^1.0.16",
+    "i18next": "^19.3.2",
+    "i18next-browser-languagedetector": "^4.0.2",
+    "i18next-xhr-backend": "^3.2.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "rc-calendar": "^9.15.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.3",
     "react-router-dom": "^5.1.2",
     "recharts": "^2.0.0-beta.1",
     "semantic-ui-css": "^2.4.1",
