--- a/package.json
+++ b/package.json
@@ -15,6 +15,16 @@
     "pack": "yarn run electron-builder --win",
     "dev": "yarn run concurrently \"yarn run parcel-server\" \"yarn run wait-server && cross-env NODE_ENV=development electron .\""
   },
+  "lint-staged": {
+    "app/**/*.{js,jsx}": [
+      "yarn run eslint app/ --fix"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "build": {
     "appId": "com.ping",
     "win": {
@@ -51,6 +61,7 @@
     "i18next-xhr-backend": "^3.2.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "rc-calendar": "^9.15.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -71,8 +82,17 @@
     "del-cli": "^3.0.0",
     "electron": "^7.1.10",
     "electron-builder": "^22.3.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
     "parcel-bundler": "^1.12.4",
     "postcss-modules": "^1.5.0",
+    "prettier": "^1.19.1",
     "sass": "^1.25.0",
     "wait-on": "^4.0.0"
   }
