--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     }
   },
   "build": {
-    "appId": "com.ping",
+    "appId": "com.speedcheck",
     "win": {
       "target": [
         {
@@ -37,15 +37,6 @@
         }
       ]
     },
-    "extraFiles": [
-      {
-        "from": "app/ookla-speedtest-1.0.0-win64",
-        "to": "Resources/bin",
-        "filter": [
-          "**/*"
-        ]
-      }
-    ],
     "files": [
       "app/electron.js",
       "app/DB.js",
@@ -54,6 +45,7 @@
     ]
   },
   "dependencies": {
+    "download": "^7.1.0",
     "electron-is-dev": "^1.1.0",
     "electron-root-path": "^1.0.16",
     "i18next": "^19.3.2",
@@ -70,6 +62,7 @@
     "recharts": "^2.0.0-beta.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
+    "sha256-file": "^1.0.0",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
