--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean-build": "yarn run del build/ .cache dist/",
     "build": "yarn run clean-build && yarn run parcel-build && yarn run electron-builder --dir",
     "pack": "yarn run electron-builder --win",
-    "dev": "yarn run concurrently \"yarn run parcel-server\" \"yarn run wait-server && cross-env NODE_ENV=development electron .\""
+    "dev": "yarn run concurrently \"yarn run parcel-server\" \"cross-env NODE_ENV=development electron .\""
   },
   "lint-staged": {
     "app/**/*.{aaaaaaaaa}": [
@@ -77,8 +77,7 @@
     "parcel": "^2.0.0-beta.1",
     "postcss-modules": "^3.2.0",
     "prettier": "^2.0.5",
-    "sass": "^1.26.10",
-    "wait-on": "^5.2.0"
+    "sass": "^1.26.10"
   },
   "resolutions": {
     "elliptic": "6.5.3",
