--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "author": "Eduardo Lopes",
   "license": "MIT",
   "scripts": {
-    "postinstall": "yarn run electron-builder install-app-deps",
-    "parcel-server": "yarn run parcel serve ./app/index.html --dist-dir build/",
-    "parcel-build": "yarn run parcel build ./app/index.html --dist-dir build/ --public-url ./",
-    "wait-server": "wait-on http://localhost:1234",
-    "clean-build": "yarn run del build/ .cache dist/",
-    "build": "yarn run clean-build && yarn run parcel-build && yarn run electron-builder --dir",
-    "pack": "yarn run electron-builder --win",
-    "dev": "yarn run concurrently \"yarn run parcel-server\" \"cross-env NODE_ENV=development electron .\""
+    "postinstall": "yarn electron-builder install-app-deps",
+    "server": "yarn webpack-dev-server",
+    "wait-server": "yarn wait-on http://localhost:3000",
+    "clean-build": "yarn del build/ .cache dist/",
+    "build": "yarn clean-build && yarn parcel-build && yarn electron-builder --dir",
+    "pack": "yarn electron-builder --win",
+    "dev": "yarn concurrently \"yarn server\" \"yarn wait-server && cross-env NODE_ENV=development electron .\""
   },
   "lint-staged": {
     "app/**/*.{aaaaaaaaa}": [
@@ -48,6 +47,7 @@
   "dependencies": {
     "download": "^8.0.0",
     "electron-is-dev": "^1.2.0",
+    "file-loader": "^6.0.0",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^6.0.0",
     "i18next-xhr-backend": "^3.2.2",
@@ -68,17 +68,34 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^4.2.1",
+    "cssnano": "^4.1.10",
     "del-cli": "^3.0.1",
     "electron": "^9.2.0",
     "electron-builder": "^22.8.0",
+    "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
-    "parcel": "^2.0.0-beta.1",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "postcss-modules": "^3.2.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^1.2.1",
+    "sugarss": "^2.0.0",
+    "wait-on": "^5.2.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "resolutions": {
     "elliptic": "6.5.3",
