Setup fast refrash

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "yarn electron-builder install-app-deps",
-    "server": "yarn webpack-dev-server",
+    "server": "cross-env NODE_ENV=development yarn webpack-dev-server",
     "wait-server": "yarn wait-on http://localhost:3000",
     "clean-build": "yarn del build/ .cache dist/",
     "build": "yarn clean-build && yarn parcel-build && yarn electron-builder --dir",
@@ -71,6 +71,7 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
@@ -88,6 +89,7 @@
     "postcss-modules": "^3.2.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
+    "react-refresh": "^0.8.3",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
